--- a/assignment/RAP.csproj
+++ b/assignment/RAP.csproj
@@ -31,13 +31,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DataSource\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Reference Include="MySql.Data">
       <HintPath>C:\Program Files (x86)\MySQL\MySQL Connector NET 8.0.33\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
 
 </Project>
